--- a/Week 11/SLU18_3 - Exam Prep II/Exercise notebook.ipynb
+++ b/Week 11/SLU18_3 - Exam Prep II/Exercise notebook.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -144,13 +144,27 @@
     "# create function called euclidean_distance\n",
     "\n",
     "def euclidean_distance(x, y):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    if x == None:\n",
+    "        raise ValueError (\"First point must be defined.\")\n",
+    "    else:\n",
+    "        if (y == None):\n",
+    "            lst = []\n",
+    "            for i in range(len(x)):\n",
+    "                lst.append(0)\n",
+    "            y = tuple(lst)\n",
+    "    if len(x) == len(y):\n",
+    "        sums = 0\n",
+    "        for i in range(len(x)):\n",
+    "            sums += (x[i] - y[i])**2\n",
+    "        distance = math.sqrt(sums)\n",
+    "        return distance\n",
+    "    else:\n",
+    "        raise ValueError (\"Cannot compute distance between points with different number of coordinates.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -164,7 +178,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer is correct. Good Job.\n"
+     ]
+    }
+   ],
    "source": [
     "# Checking the answer:\n",
     "a = (8, -3, 4)\n",
@@ -282,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -294,7 +316,18 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'S': ['surprse', 'salut'], 'B': ['bye'], 'T': ['tomat']}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create function called create_array\n",
     "\n",
@@ -303,12 +336,31 @@
     "# ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def create_index(lst):\n",
+    "    d = {}\n",
+    "    l1 = [word for word in lst if type(word) == str]\n",
+    "    l2 = []\n",
+    "    for word in l1:\n",
+    "        cw = re.sub(r\"[^a-zA-z]\",\"\", word)\n",
+    "        l2.append(cw)\n",
+    "    l3 = [word.lower() for word in l2 if word != \"\" and word != None]\n",
+    "    c = \"\"\n",
+    "    for word in l3:\n",
+    "        if c != word[0]:\n",
+    "            c = word[0]\n",
+    "            l4 = [word for word in l3 if c == word[0]]\n",
+    "            l5 = sorted(l4, reverse=True)\n",
+    "            d[word[0].upper()] = l5\n",
+    "    return d\n",
+    "\n",
+    "lst = [\"Salut!\", 9, 7.5, [1, 2, 3], \"bye\", \"tomat0\", \"surpr!se\", 13, None]\n",
+    "answer = create_index(lst)\n",
+    "answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -322,7 +374,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer is correct. Good Job.\n"
+     ]
+    }
+   ],
    "source": [
     "lst = [\"Salut!\", 9, 7.5, [1, 2, 3], \"bye\", \"tomat0\", \"surpr!se\", 13, None]\n",
     "answer = create_index(lst)\n",
@@ -397,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -418,12 +478,42 @@
     "# ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def parse_json(f):\n",
+    "    lines = f.readlines()\n",
+    "    lst = []\n",
+    "    for line in lines:\n",
+    "        try:\n",
+    "            data_dict = eval(line)\n",
+    "            if \"A\" in data_dict and \"B\" in data_dict:\n",
+    "                lst.append(data_dict)\n",
+    "        except:\n",
+    "            pass \n",
+    "    flag1 = 0\n",
+    "    for d in lst:\n",
+    "        if type(d[\"A\"]) == int or type(d[\"A\"]) == float:\n",
+    "            min_int = d[\"A\"]\n",
+    "            print(\"here1\")\n",
+    "            flag1 = 1\n",
+    "            break\n",
+    "    max_str = \"\"\n",
+    "    flag2 = 0\n",
+    "    for d in lst:\n",
+    "        if (type(d[\"A\"]) == int or type(d[\"A\"]) == float) and d[\"A\"] < min_int:\n",
+    "            min_int = d[\"A\"]\n",
+    "        if (type(d[\"B\"]) == str) and len(d[\"B\"]) > len(max_str):\n",
+    "            max_str = d[\"B\"]\n",
+    "            flag2 = 1\n",
+    "    if flag1 == 0:\n",
+    "        min_int = None\n",
+    "    if flag2 == 0:\n",
+    "        max_str = None\n",
+    "    return [min_int, max_str]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -437,7 +527,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "here1\n",
+      "[-14, 'Hello']\n",
+      "[None, 'Hello']\n",
+      "[None, None]\n",
+      "[None, 'Hello']\n",
+      "Answer is correct. Good Job.\n"
+     ]
+    }
+   ],
    "source": [
     "data = (\n",
     "    '{\"C\": 3}\\n'\n",
@@ -573,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -594,12 +697,16 @@
     "# ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "class Node:\n",
+    "    def __init__(self, value=None, next_node=None):\n",
+    "        self.value = value\n",
+    "        self.next_node = next_node\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -613,7 +720,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer is correct. Good Job.\n"
+     ]
+    }
+   ],
    "source": [
     "node = Node(1, 'next')\n",
     "assert isinstance(node, Node)\n",
@@ -724,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -748,12 +863,46 @@
     "# ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n"
+    "class LinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.base = Node()\n",
+    "        \n",
+    "    def add_node(self, value):\n",
+    "        if value == None:\n",
+    "            return\n",
+    "        p = self.base\n",
+    "        while p.next_node is not None:\n",
+    "            p = p.next_node\n",
+    "        p.next_node = Node(value=value)\n",
+    "        \n",
+    "    def remove_node(self, value):\n",
+    "        if value == None:\n",
+    "            return \n",
+    "        p = self.base\n",
+    "        prev = p\n",
+    "        while p.next_node is not None:\n",
+    "            if p.value == value:\n",
+    "                prev.next_node = p.next_node\n",
+    "                break\n",
+    "            prev = p\n",
+    "            p = p.next_node\n",
+    "        if p.value == value:\n",
+    "            prev.next_node = p.next_node \n",
+    "        \n",
+    "    def count_nodes(self):\n",
+    "        p = self.base\n",
+    "        i = 0\n",
+    "        while p.next_node is not None:\n",
+    "            i += 1\n",
+    "            p = p.next_node\n",
+    "        return i\n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -767,7 +916,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer is correct. Good Job.\n"
+     ]
+    }
+   ],
    "source": [
     "ll = LinkedList()\n",
     "assert isinstance(ll, LinkedList)\n",
@@ -867,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -881,7 +1038,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer is correct. Good Job.\n"
+     ]
+    }
+   ],
    "source": [
     "ll = LinkedList()\n",
     "ll.add_node(3)\n",
@@ -989,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1010,12 +1175,18 @@
     "# ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def create_list():\n",
+    "    l = LinkedList()\n",
+    "    l.add_node(10)\n",
+    "    l.add_node(3)\n",
+    "    l.add_node(7)\n",
+    "    l.add_node(9)\n",
+    "    return l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1029,7 +1200,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer is correct. Good Job.\n"
+     ]
+    }
+   ],
    "source": [
     "l = create_list()\n",
     "assert isinstance(l, LinkedList)\n",
@@ -1108,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1129,12 +1308,15 @@
     "# ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def update_list(l):\n",
+    "    l.remove_node(10)\n",
+    "    l.remove_node(7)\n",
+    "    return l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1148,7 +1330,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer is correct. Good Job.\n"
+     ]
+    }
+   ],
    "source": [
     "l = LinkedList()\n",
     "l.add_node(10)\n",
@@ -1252,8 +1442,12 @@
     "# ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
-    "\n"
+    "def gimme_ones(n):\n",
+    "    lst = []\n",
+    "    for i in range(0, n):\n",
+    "        lst.append(1.)\n",
+    "    arr = np.array(lst)\n",
+    "    return arr\n"
    ]
   },
   {
@@ -1329,7 +1523,10 @@
     "# ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def gimme_numbers(n,x):\n",
+    "    arr = gimme_ones(n)\n",
+    "    arr = arr * x\n",
+    "    return arr"
    ]
   },
   {
@@ -1428,7 +1625,16 @@
     "# ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def create_array():\n",
+    "    lst = []\n",
+    "    for i in range(1, 10):\n",
+    "        lst.append(i)\n",
+    "    arr = np.array(lst)\n",
+    "    arr = arr.reshape(3, 3)\n",
+    "    return arr\n",
+    "\n",
+    "arr = create_array()\n",
+    "arr"
    ]
   },
   {
@@ -1505,7 +1711,18 @@
     "# ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n"
+    "def select_first_col(q):\n",
+    "    lst = []\n",
+    "    for linha in range(q.shape[0]):\n",
+    "        for coluna in range(q.shape[1]):\n",
+    "            if coluna == 0:\n",
+    "                lst.append(q[linha][coluna])\n",
+    "    arr = np.array(lst)\n",
+    "    return arr\n",
+    "\n",
+    "a = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "arr = select_first_col(a)\n",
+    "arr.shape"
    ]
   },
   {
@@ -1576,7 +1793,14 @@
     "# ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def select_values(x):\n",
+    "    lst = []\n",
+    "    for linha in range(x.shape[0]):\n",
+    "        for coluna in range(x.shape[1]):\n",
+    "            if x[linha][coluna] > 4:\n",
+    "                lst.append(x[linha][coluna])\n",
+    "    arr = np.array(lst)\n",
+    "    return arr"
    ]
   },
   {
@@ -1649,7 +1873,19 @@
     "# ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def invert_values(x):\n",
+    "    arr2 = np.zeros((x.shape[0], x.shape[1]))\n",
+    "    for linha in range(x.shape[0]):\n",
+    "        for coluna in range(x.shape[1]):\n",
+    "            if x[linha][coluna] == 0:\n",
+    "                return False\n",
+    "    for linha in range(x.shape[0]):\n",
+    "        for coluna in range(x.shape[1]):\n",
+    "            arr2[linha][coluna] = float(1 / x[linha][coluna])\n",
+    "    return arr2\n",
+    "\n",
+    "a = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "invert_values(a)"
    ]
   },
   {
@@ -1792,7 +2028,7 @@
     "# answers[\"question_1\"] = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "answers[\"question_1\"] = 1"
    ]
   },
   {
@@ -1843,7 +2079,7 @@
     "# answers[\"question_2\"] = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "answers[\"question_2\"] = 2"
    ]
   },
   {
@@ -1895,7 +2131,7 @@
     "# answers[\"question_3\"] = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "answers[\"question_3\"] = 4"
    ]
   },
   {
@@ -1945,7 +2181,7 @@
     "# answers[\"question_4\"] = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "answers[\"question_4\"] = 2"
    ]
   },
   {
@@ -1995,7 +2231,7 @@
     "# answers[\"question_5\"] = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "answers[\"question_5\"] = 4"
    ]
   },
   {
@@ -2058,7 +2294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
