--- a/Week 11/SLU18_3 - Exam Prep II/Solutions notebook.ipynb
+++ b/Week 11/SLU18_3 - Exam Prep II/Solutions notebook.ipynb
@@ -1675,7 +1675,9 @@
     "def select_first_col(q):\n",
     "    return q[:, 0]\n",
     "\n",
-    "### END SOLUTION\n"
+    "### END SOLUTION\n",
+    "a = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "arr = "
    ]
   },
   {
@@ -2245,7 +2247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
